# UAV-precision-landing-simulation

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  THIRD_PARTY_NOTICES.md  UPSTREAM_BASELINE.md  docker-compose.yml  fix_waypoint.py  master_plan.md  mission_logs.txt  snapshot_report.md
docker/: entrypoint.sh  versions.env
docs/: walkthrough.md
docs/evidence/: CLEANUP_MANIFEST.md  EVIDENCE_CURATION_REPORT.md  FINAL_ACCEPTANCE_REPORT.md  FINAL_RESULTS.md  FINAL_TERMINATION_REPORT.md  GITIGNORE_REVIEW_REPORT.md  LICENSE_ATTRIBUTION_REPORT.md  PHASE_F_CLEANUP_REPORT.md  README_DOCUMENTATION_REPORT.md  REPORT_C1.md  REPORT_C2.md  REPORT_C3.md  REPOSITORY_INVENTORY.md  STATIC_VALIDATION_REPORT.md  WALKTHROUGH.md
drone_landing_ws/: check_marker.py
drone_landing_ws/src/precision_landing_control_cpp/: CMakeLists.txt  package.xml
drone_landing_ws/src/precision_landing_control_cpp/config/: pid.yaml
drone_landing_ws/src/precision_landing_control_cpp/include/precision_landing_control_cpp/: pid_controller.hpp
drone_landing_ws/src/precision_landing_control_cpp/launch/: control_cpp.launch.py
drone_landing_ws/src/precision_landing_control_cpp/src/: control_node.cpp  pid_controller.cpp
drone_landing_ws/src/precision_landing_control_cpp/test/: test_pid_controller.cpp
scripts/: allow_x11.sh  bootstrap_upstream.sh  build_workspace.sh  run_camera_only_gate.sh  run_cpp_shadow.sh  run_demo_cpp_control.sh  run_demo_python_baseline.sh  run_test_gui.sh  stop_demo.sh  verify_halfday.sh
tests/: test_aruco.py
(+19 files in other folders)
